--- a/Bootstrap5ModalExample/Pages/Shared/_Layout.cshtml
+++ b/Bootstrap5ModalExample/Pages/Shared/_Layout.cshtml
@@ -35,6 +35,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Dialog1">Form</a>
                         </li>
 
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Dialog2">With progress</a>
+                        </li>
 
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/ScrollingPage">Scrolling</a>
