--- a/Bootstrap5ModalExample/Pages/Dialog2.cshtml
+++ b/Bootstrap5ModalExample/Pages/Dialog2.cshtml
@@ -3,13 +3,11 @@
 @{
 }
 <style>
-    .bar{}
+    .bar {
+    }
 </style>
 
-@*
-    The base code same from https://www.codeply.com/go/NCsThOAy3V/bootstrap-wait-modal-progress-bar
-    and needed a lot of modifications to work, guessing it was done in an earlier version of BootStrap.
-*@
+
 <div class="container">
     <h1 class="fs-5">Modal with progress bar</h1>
     <button id="btn-confirm" role="button" class="btn btn-primary" data-toggle="modal">Submit</button>
@@ -23,7 +21,9 @@
             </div>
             <div class="modal-body">
                 <div class="progress">
-                    <div class="progress-bar bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress-bar bar" 
+                         id="progress" 
+                         role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" max="100">
                     </div>
                 </div>
             </div>
@@ -38,43 +38,29 @@
     {
     <script>
 
-        var progressModal = new bootstrap.Modal(document.getElementById('myModal'),
-            {
-                backdrop: 'static',
-                keyboard: false,
-                show: false
-            });
-
         document.getElementById("btn-confirm").addEventListener("click", function () {
-            var $bar = $('.bar');
-            $bar.width(0);
-            var progress = setInterval(function () {
-                
-                $("#myModal").modal('show');
+            $("#myModal").modal('show');
 
-                console.log($bar.width());
-                if ($bar.width() > 466) {
-                    // complete!
-                    // reset progress bar
-                    clearInterval(progress);
-                    $('.progress').removeClass('active');
-                    //$bar.width(0);
+            setTimeout(function() {
+                $('#myModal').modal('toggle');
+            }, 12000);
 
-                    // update modal
-                    //$('#myModal .modal-body').html('Task complete. You can now close the modal.');
-                    //$('#myModal .hide,#myModal .in').toggleClass('hide in');
+            var element = document.getElementById("progress");
+            var width = 1;
+            var identity = setInterval(performWork, 100);
 
-                    // re-enable modal allowing close
-                    $('#myModal').data('reenable', true);
-                    $('#myModal').modal('hide');
+            function performWork() {
+                if (width >= 100) {
+                    clearInterval(identity);
+
                 } else {
-
-                    // perform processing logic (ajax) here
-                    $bar.width(parseInt($bar.width()) + 10);
+                    width++; 
+                    $("#progress")
+                        .css("width", width + "%")
+                        .attr("aria-valuenow", width)
+                        .text(width + "% Complete");
                 }
-
-                //$bar.text($bar.width()/5 + "%");
-            }, 600);
+            }
         });
 
         $("#modal-btn-no").on("click", function () {
@@ -84,7 +70,7 @@
 
         $('#myModal').on('hidden.bs.modal', function () {
             // reset modal
-            console.log('reset modal');
+
             if ($('#myModal').data('reenable')) {
                 $(this).removeData();
                 $('#myModal').modal({
