--- a/TryingNewFeatures/Pages/Index.cshtml
+++ b/TryingNewFeatures/Pages/Index.cshtml
@@ -105,6 +105,10 @@
 
 </div>
 
+@*
+    All scripting below will be refactored into a class
+*@
+
 @section Scripts
     {
     <script src="~/lib/bootstrap/js/bootstrapThemeToggler.js"></script>
