--- a/Bootstrap5ModalExample/Pages/Index.cshtml
+++ b/Bootstrap5ModalExample/Pages/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="alert alert-primary" role="alert">
-    Code sample for a Bootstrap modal to ask a question centered <span class="badge rounded-pill bg-primary">vertically</span>
+    Code sample for a Bootstrap modal to ask a question centered <span class="badge rounded-pill">vertically</span>
 </div>
 
 <div class="container" id="main-content">
