--- a/TryingNewFeatures/Pages/Index.cshtml
+++ b/TryingNewFeatures/Pages/Index.cshtml
@@ -6,27 +6,12 @@
 
 <div class="container">
 
-    <div class="d-flex mb-4">
-        <div class="form-check form-switch ms-auto mt-3 me-3">
-            <label class="form-check-label ms-3" for="lightSwitch" arial-label="toggle screen light or dark">
-                <svg xmlns="http://www.w3.org/2000/svg"
-                     width="25"
-                     height="25"
-                     aria-label="click to toggle light/dark mode"
-                     fill="currentColor"
-                     class="bi bi-brightness-high"
-                     viewBox="0 0 16 16">
-                    <path d="M8 11a3 3 0 1 1 0-6 3 3 0 0 1 0 6zm0 1a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z" />
-                </svg>
-            </label>
-            <input class="form-check-input"
-                   type="checkbox"
-                   id="lightSwitch" />
-        </div>
-    </div>
+    @{
+        await Html.RenderPartialAsync("_lightSwitchPage");
+    }
 
-    <form class="row g-3 border bg-dark-subtle">
-        <h1 class="fs-4">Data entry</h1>
+    <form class="row g-3 border">
+        <h1 class="fs-4">Registration</h1>
         <div class="col-md-4">
             <label for="validationCustom01" class="form-label">First name</label>
             <input type="text" class="form-control" id="validationCustom01" value="Karen" required>
@@ -97,8 +82,13 @@
                 </div>
             </div>
         </div>
-        <div class="col-12 mb-5">
-            <button class="btn" id="btnSubmit" type="submit">Submit form</button>
+        <div class="col-12 mb-2">
+            <div class="hstack gap-3">
+                <div class="border ms-auto">Hey</div>
+                <div class="vr"></div>
+                <button class="btn float-end" id="btnSubmit" type="submit">Submit form</button>
+            </div>
+            
         </div>
     </form>
 
@@ -111,7 +101,6 @@
 
 @section Scripts
     {
-    <script src="~/lib/bootstrap/js/bootstrapThemeToggler.js"></script>
 
     <script>
         document.addEventListener("DOMContentLoaded", () => {
@@ -143,44 +132,14 @@
             }
 
             toggleMode();
+
         });
 
         function toggleMode() {
-
-            var borderColor = '';
-
-            var submitButton = document.getElementById('btnSubmit');
-            submitButton.classList.remove('btn-primary');
-            submitButton.classList.remove('btn-secondary');
-
-            var currentTheme = localStorage.getItem("theme");
-
-            if (currentTheme !== null) {
-                if (currentTheme === 'light') {
-                    borderColor = 'border-black';
-                    submitButton.classList.add('btn-primary');
-                } else {
-                    borderColor = 'border-white';
-                    submitButton.classList.add('btn-secondary');
-                }
-            }
-
-            document.querySelectorAll('.nav-link').forEach(link => {
-
-                link.classList.remove('border-bottom');
-                link.classList.remove('border-top');
-                link.classList.remove('border-white');
-
-                if (link.getAttribute('href').toLowerCase() === location.pathname.toLowerCase()) {
-
-                    link.classList.add(borderColor);
-                    link.classList.add('border-bottom');
-                    link.classList.add('border-top');
-                } else {
-                    link.classList.add(borderColor);
-                }
-
-            });
+            
+            $themeHelper.setDocument(document);
+            $themeHelper.doNavigation();
+            $themeHelper.configureSubmitButton();
         }
 
     </script>
