--- a/TryingNewFeatures/Pages/Shared/_Layout.cshtml
+++ b/TryingNewFeatures/Pages/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
+        <div class="container text-primary-emphasis">
             Bootstrap 5.3 theme switcher example by Karen Payne
         </div>
     </footer>
