refactored toast to partial page

--- a/TryingNewFeatures/Pages/Shared/_Layout.cshtml
+++ b/TryingNewFeatures/Pages/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer bg-body-tertiary">
         <div class="container text-primary-emphasis">
             Bootstrap 5.3 theme switcher example by Karen Payne
         </div>
