--- a/Bootstrap5ToastExample/Pages/Privacy.cshtml
+++ b/Bootstrap5ToastExample/Pages/Privacy.cshtml
@@ -9,37 +9,15 @@
     <div class="alert alert-secondary" role="alert">
         Stacking toast
     </div>
+    
 
     <button type="button" class="btn btn-primary" id="toastButton1">Toast 1</button>
     <button type="button" class="btn btn-danger float-end" id="toastButton2">Toast 2</button>
   
-    <div class="toast-container position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+    <partial name="_Privacy" model="Model.MessageContainer" />
 
-        <div class="toast text-white bg-primary border-0" id="topToast" role="alert"
-             aria-live="assertive" aria-atomic="true">
 
-            <div class="d-flex">
-                <div class="toast-body">
-                    @Model.TopMessage
-                </div>
-                <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"
-                        aria-label="Close"></button>
-            </div>
-        </div>   
-        
-        <div class="toast text-white bg-danger border-0" id="bottomToast" role="alert" aria-live="assertive" aria-atomic="true">
-
-            <div class="d-flex">
-                <div class="toast-body">
-                    @Model.BottomMessage
-                </div>
-                <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"
-                        aria-label="Close"></button>
-            </div>
-        </div>
-
-    </div>
-
+    
 </div>
 
 @section Scripts
