--- a/Bootstrap5ToastExample/Pages/Privacy.cshtml
+++ b/Bootstrap5ToastExample/Pages/Privacy.cshtml
@@ -14,9 +14,8 @@
     <button type="button" class="btn btn-primary" id="toastButton1">Toast 1</button>
     <button type="button" class="btn btn-danger float-end" id="toastButton2">Toast 2</button>
   
+    @*Toast code*@
     <partial name="_Privacy" model="Model.MessageContainer" />
-
-
     
 </div>
 
