--- a/TryingNewFeatures/Pages/About.cshtml
+++ b/TryingNewFeatures/Pages/About.cshtml
@@ -24,21 +24,17 @@
     {
 
     <script>
+
         document.addEventListener("DOMContentLoaded", () => {
             $themeHelper.setDocument(document);
             $themeHelper.changeMode();
-            toggleMode();
+            $themeHelper.toggleMode();
         });
 
         document.getElementById("lightSwitch").addEventListener("click", function () {
             $themeHelper.lightSwitchHandler();
-            toggleMode();
+            $themeHelper.toggleMode();
         });
-
-        function toggleMode() {
-            $themeHelper.doNavigation();
-            $themeHelper.aboutPage();
-        }
 
     </script>
 }
