--- a/BootstrapInputGroupValidateExample/wwwroot/css/site.css
+++ b/BootstrapInputGroupValidateExample/wwwroot/css/site.css
@@ -21,11 +21,11 @@ body {
   margin-bottom: 60px;
 }
 
-hr {
-    margin: 1.2rem 0;
-    color: inherit;
-    background-color: currentColor;
-    border: 0;
-    opacity: 0.25;
+.needs-validation {
+
 }
 
+span.inputGroupSpan {
+    background-color: black;
+    color: white;
+}
