--- a/TryingNewFeatures/Pages/Privacy.cshtml
+++ b/TryingNewFeatures/Pages/Privacy.cshtml
@@ -6,3 +6,16 @@
 <h1>@ViewData["Title"]</h1>
 
 <p>Use this page to detail your site's privacy policy.</p>
+
+@section Scripts
+{
+
+    <script>
+
+        document.addEventListener("DOMContentLoaded", () => {
+            $themeHelper.setDocument(document);
+            $themeHelper.toggleMode();
+        });
+        
+    </script>
+}
