--- a/TryingNewFeatures/Pages/Shared/_Layout.cshtml
+++ b/TryingNewFeatures/Pages/Shared/_Layout.cshtml
@@ -31,6 +31,10 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-page="/About">About</a>
                         </li>
+                        
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-page="/Privacy">Privacy</a>
+                        </li>
                     </ul>
                 </div>
             </div>
