--- a/Bootstrap5ColumnsExamples/Pages/Shared/_Layout.cshtml
+++ b/Bootstrap5ColumnsExamples/Pages/Shared/_Layout.cshtml
@@ -11,8 +11,15 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+
+            <strong>Code sample</strong>
             <div class="container">
-                <strong >Code sample</strong>
+                <a class="skiplink mb-4"
+                   id="skipper"
+                   asp-fragment="menu-main"
+                   aria-label="Skip to content">
+                    Skip to content
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
