--- a/Bootstrap5ColumnsExamples/Pages/Index1.cshtml
+++ b/Bootstrap5ColumnsExamples/Pages/Index1.cshtml
@@ -80,6 +80,6 @@ Notes
         </div>
     </div>
     
-    <p style="color:burlywood">color contrast issue</p>
+    <p style="color:burlywood">color contrast issue.</p>
 
 </div>
