updated image location and secer WCAG II items added

--- a/Bootstrap5OffCanvasExample/Pages/Index.cshtml
+++ b/Bootstrap5OffCanvasExample/Pages/Index.cshtml
@@ -21,7 +21,7 @@
 
             <div class="card shadow rounded-1">
                 <div class="card-body  bg-light">
-                    Bootstrap off canvas and progress bar (toggle and button are not synchronized)
+                    <H1 class="fs-6">Bootstrap off canvas and progress bar (toggle and button are not synchronized)</H1!>
                 </div>
             </div>
 
