--- a/Bootstrap5OffCanvasExample/Pages/Shared/IndexPartial.cshtml
+++ b/Bootstrap5OffCanvasExample/Pages/Shared/IndexPartial.cshtml
@@ -25,12 +25,12 @@
 
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasMain" aria-labelledby="offcanvasMainLabel">
             <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasMainLabel">About</h5>
+                <h2 class="offcanvas-title" id="offcanvasMainLabel">About</h2>
                 <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
 
             <div class="offcanvas-body">
-                <img src="images/earth.png"/>
+                <img src="~/lib/images/earth.png" alt="Earth" />
                 <div class="mt-3">
                     <strong>Frank Borman - One World</strong><br/><br/>
                     The view of the earth from the moon fascinated me - a small disk, 240,000 miles away. It was hard to think that that
