--- a/Bootstrap5OffCanvasExample/Pages/Index1.cshtml
+++ b/Bootstrap5OffCanvasExample/Pages/Index1.cshtml
@@ -128,14 +128,12 @@
     
     <div class="offcanvas offcanvas-bottom" id="offcanvasBottom">
         <div class="offcanvas-header">
-            <h5 class="offcanvas-title">
-                From bottom
-            </h5>
+
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
-        <div class="offcanvas-body">
+        <div class="offcanvas-body border">
             <a href="https://getbootstrap.com/docs/5.0/components/offcanvas/" target="_blank">
-                <img src="images/Bootstrap.png" width="293" height="221"/>
+                <img src="images/Bootstrap.png" width="84" height="68" />
             </a>
             
         </div>
