--- a/Bootstrap5OffCanvasExample/Pages/Shared/_Layout.cshtml
+++ b/Bootstrap5OffCanvasExample/Pages/Shared/_Layout.cshtml
@@ -13,6 +13,14 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3" id="topOfPage">
             <div class="container">
+                <a class="skiplink mb-4 mt-2"
+                   id="skipper"
+                   data-bs-toggle="offcanvas" 
+                   data-bs-target="#offcanvasMain1"
+                   asp-fragment="offcanvasMain1"
+                   aria-label="Skip to content">
+                    Skip to content 
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
