--- a/Bootstrap5OffCanvasExample/Pages/Shared/_Layout.cshtml
+++ b/Bootstrap5OffCanvasExample/Pages/Shared/_Layout.cshtml
@@ -33,6 +33,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index1">Example 2</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/StickySocialBar">Sticky</a>
+                        </li>
                     </ul>
                 </div>
             </div>
