--- a/BootstrapInputGroupValidateExample/wwwroot/css/site.css
+++ b/BootstrapInputGroupValidateExample/wwwroot/css/site.css
@@ -1,31 +1,95 @@
 html {
-  font-size: 14px;
+    font-size: 12px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 12spx;
+    }
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
 }
 
 .needs-validation {
-
 }
 
-span.inputGroupSpan {
-    background-color: black;
+span.inputGroupSpanEven {
+    background-color: #cfe0ee;
+    color: black;
+}
+
+span.inputGroupSpanOdd {
+    background-color: white;
+    color: black;
+}
+
+h1 {
+    background-color: #123466;
+    color: white
+}
+
+    h1 span {
+        color: #d8e6fa;
+    }
+
+h2 {
+    color: #af190d;
+}
+
+    h2 span {
+        /*border-bottom: solid crimson;*/
+        font-size: 38px;
+    }
+
+.hr1 {
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.80), rgba(0, 0, 0, 0));
+}
+
+
+.progress {
+    height: 35px;
+    background: white
+}
+
+.progress-bar {
+    background: #123265;
+    font-size: 19px;
+    font-weight: bold;
+}
+
+#ssn {
+    background-color: white;
+}
+
+legend {
+    border: solid 1px black;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    border-radius: 8px;
+    font-size: 12px;
+}
+
+.bottom-button {
+    width: 5.5em;
+}
+
+#bottomSlogan {
+    background-color: #123466;
     color: white;
+    font-size: 18px;
+    padding-bottom: 3em;
+    padding-top: .5em;
 }
