--- a/BootstrapInputGroupValidateExample/wwwroot/css/site.css
+++ b/BootstrapInputGroupValidateExample/wwwroot/css/site.css
@@ -54,6 +54,8 @@ h2 {
 
 .hr1 {
     border: 0;
+    margin: 0;
+    padding: 0;
     height: 1px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.80), rgba(0, 0, 0, 0));
 }
@@ -75,6 +77,8 @@ h2 {
 }
 
 legend {
+    background: #123265;
+    color: white;
     border: solid 1px black;
     -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
@@ -90,6 +94,6 @@ legend {
     background-color: #123466;
     color: white;
     font-size: 18px;
-    padding-bottom: 3em;
+    padding-bottom: 1.5em;
     padding-top: .5em;
 }
